--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <main class="content content_indent">
           <section class="profile profile_indent">
             <img class="profile__avatar" src="./images/avatar.jpg" alt="Фотография профиля">
-            <section class="profile__info ">
-              <h1 class="profile__info-title profile__info_text_style">Жак-Ив Кусто</h1>
-              <p class="profile__info-subtitle profile__info_text_style">Исследователь океана</p>
+            <section class="profile__info">
+              <h1 class="profile__info-title">Жак-Ив Кусто</h1>
+              <p class="profile__info-subtitle">Исследователь океана</p>
               <button class="profile__edit">
                 <img src="./images/Vector-edit.svg" alt="Редактировать">
               </button>
@@ -82,9 +82,9 @@
             <h2 class="popup__title">Редактировать профиль</h2>
             <form class="form">
               <fieldset class="popup__contact">
-                <p class="popup__paragraf popup__input_text_style">
+                <p class="popup__paragraf popup__paragraf_text_style">
                   <input type="text" name="name" placeholder="Имя" value="Жак-Ив Кусто" class="popup__input popup__input_name"></p>
-                <p class="popup__paragraf popup__input_text_style">
+                <p class="popup__paragraf popup__paragraf_text_style">
                   <input type="text" name="job" placeholder="О себе" value="Исследователь океана" class="popup__input popup__input_job"></p>
               </fieldset>
             </form>
