--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
             <form class="form">
               <fieldset class="popup__contact">
                 <p class="popup__paragraf popup__paragraf_text_style">
-                  <input type="text" name="name" placeholder="Имя" value="Жак-Ив Кусто" class="popup__input popup__input_name"></p>
+                  <input type="text" name="name" placeholder="Имя" class="popup__input popup__input_name"></p>
                 <p class="popup__paragraf popup__paragraf_text_style">
-                  <input type="text" name="job" placeholder="О себе" value="Исследователь океана" class="popup__input popup__input_job"></p>
+                  <input type="text" name="job" placeholder="О себе" class="popup__input popup__input_job"></p>
               </fieldset>
             </form>
             <button class="popup__save">Сохранить</button>
