--- a/index.html
+++ b/index.html
@@ -8,61 +8,61 @@
         <title>Сервис "Mesto"</title>
     </head>
     <body class="body">
-      <div class="page indent">
+      <div class="page indent__pade">
         <header class="header indent__header">
           <img class="header__logo" src="./images/header-logo.svg" alt="Логотип сервиса Mesto Russian">
         </header>
         <main class="content indent__content">
-          <section class="profile profile_indent">
+          <section class="profile indent__profile">
             <img class="profile__avatar" src="./images/avatar.jpg" alt="Фотография профиля">
             <div class="profile__info">
               <h1 class="profile__info-title">Жак-Ив Кусто</h1>
               <p class="profile__info-subtitle">Исследователь океана</p>
               <button type="button" class="button button_type_edit-profil" aria-label="Редактировать"></button>
             </div>
-            <button class="button button_type_add-profile" aria-label="Добавить"></button>
+            <button type="button" class="button button_type_add-profile" aria-label="Добавить"></button>
           </section>
-          <section class="group-cards group-cards_indent">
+          <section class="group-cards indent__group-cards">
             <article class="card">
               <img class="card__img" src="./images/MO.jpg" alt="Озеро в Лесу">
               <div class="card__caption">
                 <h2 class="card__text">Московская область</h2>
-                <button type="button" class="button button_type_like-card button_type_like-active" aria-label="Поставить лайк" ></button>
+                <button type="button" class="button button_type_like-card" aria-label="Поставить лайк" ></button>
               </div>
             </article>
             <article class="card">
               <img class="card__img" src="./images/mysOstryj.jpg" alt="Мыс Острый Сахалинская область">
               <div class="card__caption">
                 <h2 class="card__text">Мыс Острый</h2>
-                <button type="button" class="button button_type_like-card card__like card__like card__like_active_black" aria-label="Поставить лайк" ></button>
+                <button type="button" class="button button_type_like-card" aria-label="Поставить лайк" ></button>
               </div>
             </article>
             <article class="card">
               <img class="card__img" src="./images/SudakKrym.jpg" alt="Судак Крым берег Черного моря">
               <div class="card__caption">
                 <h2 class="card__text">Судак Черное море</h2>
-                <button type="button" class="button button_type_like-card card__like card__like_active_black" aria-label="Поставить лайк" ></button>
+                <button type="button" class="button button_type_like-card" aria-label="Поставить лайк" ></button>
               </div>
             </article>
             <article class="card">
               <img class="card__img" src="./images/KurshskayKosa.jpg" alt="берег Балтийского моря">
               <div class="card__caption">
                 <h2 class="card__text">Куршская коса</h2>
-                <button type="button" class="button button_type_like-card card__like card__like_active_black" aria-label="Поставить лайк" ></button>
+                <button type="button" class="button button_type_like-card" aria-label="Поставить лайк" ></button>
               </div>
             </article>
             <article class="card">
               <img class="card__img" src="./images/Vladivostok.jpg" alt="Владивосток Скалы в бирюзовой лагуне">
               <div class="card__caption">
                 <h2 class="card__text">Владивосток</h2>
-                <button type="button" class="button button_type_like-card card__like card__like_active_black" aria-label="Поставить лайк" ></button>
+                <button type="button" class="button button_type_like-card" aria-label="Поставить лайк" ></button>
               </div>
             </article>
             <article class="card">
               <img class="card__img" src="./images/Samara.jpg" alt="Самара река Волга">
               <div class="card__caption">
                 <h2 class="card__text">Самара</h2>
-                <button type="button" class="button button_type_like-card card__like card__like_active_black" aria-label="Поставить лайк" ></button>
+                <button type="button" class="button button_type_like-card" aria-label="Поставить лайк" ></button>
               </div>
             </article>
           </section>
