--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Сервис "Mesto"</title>
     </head>
     <body class="body">
-      <div class="page indent indent__pade">
+      <div class="page indent__pade">
         <header class="header indent__header">
           <img class="header__logo" src="./images/header-logo.svg" alt="Логотип сервиса Mesto Russian">
         </header>
