--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Сервис "Mesto"</title>
     </head>
-    <body class="body">
-      <div class="page indent indent__page">
+    <body class="body indent">
+      <div class="page indent__page">
         <header class="header indent__header">
           <img class="header__logo" src="./images/header-logo.svg" alt="Логотип сервиса Mesto Russian">
         </header>
