--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Сервис "Mesto"</title>
     </head>
-    <body class="body indent">
+    <body class="body">
       <div class="page indent__page">
         <header class="header indent__header">
           <img class="header__logo" src="./images/header-logo.svg" alt="Логотип сервиса Mesto Russian">
@@ -18,7 +18,7 @@
             <div class="profile__info">
               <h1 class="profile__info-title">Жак-Ив Кусто</h1>
               <p class="profile__info-subtitle">Исследователь океана</p>
-              <button type="button" class="button button_type_edit-profil" aria-label="Редактировать"></button>
+              <button type="button" class="button button_type_edit-profile" aria-label="Редактировать"></button>
             </div>
             <button type="button" class="button button_type_add-profile" aria-label="Добавить"></button>
           </section>
