--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Сервис "Mesto"</title>
     </head>
-    <body class="body">
+    <body class="body indent">
       <div class="page indent__page">
         <header class="header indent__header">
           <img class="header__logo" src="./images/header-logo.svg" alt="Логотип сервиса Mesto Russian">
