make button delete

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
               <img class="card__img" src="./images/MO.jpg" alt="Озеро в Лесу">
               <div class="card__caption">
                 <h2 class="card__text">Московская область</h2>
-                <button type="button" class="button button_type_like-card" aria-label="Поставить лайк" ></button>
+                <button type="button" class="button button_type_like-card" aria-label="Поставить лайк"></button>
               </div>
+              <button type="button" class="button button_type_delete-card" aria-label="Удалить фотографию"></button>
             </article>
             <article class="card">
               <img class="card__img" src="./images/mysOstryj.jpg" alt="Мыс Острый Сахалинская область">
@@ -36,6 +37,7 @@
                 <h2 class="card__text">Мыс Острый</h2>
                 <button type="button" class="button button_type_like-card" aria-label="Поставить лайк" ></button>
               </div>
+              <button type="button" class="button button_type_delete-card" aria-label="Удалить фотографию"></button>
             </article>
             <article class="card">
               <img class="card__img" src="./images/SudakKrym.jpg" alt="Судак Крым берег Черного моря">
@@ -43,6 +45,7 @@
                 <h2 class="card__text">Судак Черное море</h2>
                 <button type="button" class="button button_type_like-card" aria-label="Поставить лайк" ></button>
               </div>
+              <button type="button" class="button button_type_delete-card" aria-label="Удалить фотографию"></button>
             </article>
             <article class="card">
               <img class="card__img" src="./images/KurshskayKosa.jpg" alt="берег Балтийского моря">
@@ -50,6 +53,7 @@
                 <h2 class="card__text">Куршская коса</h2>
                 <button type="button" class="button button_type_like-card" aria-label="Поставить лайк" ></button>
               </div>
+              <button type="button" class="button button_type_delete-card" aria-label="Удалить фотографию"></button>
             </article>
             <article class="card">
               <img class="card__img" src="./images/Vladivostok.jpg" alt="Владивосток Скалы в бирюзовой лагуне">
@@ -57,6 +61,7 @@
                 <h2 class="card__text">Владивосток</h2>
                 <button type="button" class="button button_type_like-card" aria-label="Поставить лайк" ></button>
               </div>
+              <button type="button" class="button button_type_delete-card" aria-label="Удалить фотографию"></button>
             </article>
             <article class="card">
               <img class="card__img" src="./images/Samara.jpg" alt="Самара река Волга">
@@ -64,6 +69,7 @@
                 <h2 class="card__text">Самара</h2>
                 <button type="button" class="button button_type_like-card" aria-label="Поставить лайк" ></button>
               </div>
+              <button type="button" class="button button_type_delete-card" aria-label="Удалить фотографию"></button>
             </article>
           </section>
         </main>
