--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <footer class="footer indent__footer">
           <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
         </footer>
-        <div class="popup">
+        <div class="popup popup_style_light">
           <button type="button" class="button button_type_close-popup" aria-label="Закрыть"></button>
           <div class="popup__container">
             <h2 class="popup__title">Редактировать профиль</h2>
@@ -89,11 +89,11 @@
             </form>
           </div>
         </div>
-        <div class="popup popup__foto">
+        <div class="popup  popup_style_light popup__new-mesto">
           <button type="button" class="button button_type_close-popup" aria-label="Закрыть"></button>
           <div class="popup__container">
             <h2 class="popup__title">Новое место</h2>
-            <form name="foto-form" class="form">
+            <form name="new-mesto-form" class="form">
               <fieldset class="popup__contact">
                 <input type="text" name="name" required placeholder="Название" class="popup__input popup__input_foto_name" autofocus>
                 <input type="text" name="link" required placeholder="Ссылка на картинку" class="popup__input popup__input_foto_link">
@@ -101,6 +101,13 @@
               <button type="submit" class="button button_type_save-popup">Создать</button>
             </form>
           </div>
+        </div>
+        <div class="popup popup_style_dark">
+          <button type="button" class="button button_type_close-popup" aria-label="Закрыть"></button>
+          <figure class="popup__opened-foto">
+              <img src="./images/SudakKrym.jpg" class="popup__foto" alt="Судак">
+              <figcaption class="popup__foto-caption">Судак Крым</figcaption>
+          </figure>
         </div>
       </div>
     <script src="./scripts/index.js"></script>
