--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
       <template id="card_template">
         <article class="card">
-          <img class="card__img" src="" alt="">
+          <img class="card__img" src="." alt="">
           <div class="card__caption">
             <h2 class="card__text"></h2>
             <button type="button" class="button button_type_like button_type_like-card" aria-label="Поставить лайк"></button>
