--- a/index.html
+++ b/index.html
@@ -29,33 +29,33 @@
           <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
         </footer>
         <div class="popup popup_type_profile popup_theme_light">
-          <button type="button" class="button button__close button_type_close-profile" aria-label="Закрыть"></button>
+          <button type="button" class="button button_style_close button_type_close-profile" aria-label="Закрыть"></button>
           <div class="popup__container">
             <h2 class="popup__title">Редактировать профиль</h2>
-            <form name="edit-form" class="form form__profile">
+            <form name="edit-form" class="form form-profile">
               <fieldset class="popup__contact">
                 <input type="text" name="name" required placeholder="Имя" class="popup__input popup__input_edit_name" autofocus>
                 <input type="text" name="job" required placeholder="О себе" class="popup__input popup__input_edit_job">
               </fieldset>
-              <button type="button" class="button button_type_save-profile button__save">Сохранить</button>
+              <button type="button" class="button button_type_save-profile button_style_save">Сохранить</button>
               </form>
           </div>
         </div>
         <div class="popup popup_type_mesto popup_theme_light">
-          <button type="button" class="button button__close button_type_close-mesto" aria-label="Закрыть"></button>
+          <button type="button" class="button button_style_close button_type_close-mesto" aria-label="Закрыть"></button>
           <div class="popup__container">
             <h2 class="popup__title">Новое место</h2>
-            <form name="new-mesto-form" class="form form__mesto">
+            <form name="new-mesto-form" class="form form-mesto">
               <fieldset class="popup__contact">
                 <input type="text" name="name" required placeholder="Название" class="popup__input popup__input_foto_name">
                 <input type="text" name="link" required placeholder="Ссылка на картинку" class="popup__input popup__input_foto_link">
               </fieldset>
-              <button type="button" class="button button_type_save-mesto button__save">Создать</button>
+              <button type="button" class="button button_type_save-mesto button_style_save">Создать</button>
             </form>
           </div>
         </div>
         <div class="popup popup_type_image popup_theme_dark">
-          <button type="button" class="button button__close button_type_close-image" aria-label="Закрыть"></button>
+          <button type="button" class="button button_style_close button_type_close-image" aria-label="Закрыть"></button>
           <figure class="popup__image-container">
             <img src="." class="popup__image" alt="">
             <figcaption class="popup__image-caption"></figcaption>
