--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <input type="text" name="name" required placeholder="Имя" class="popup__input popup__input_edit_name" autofocus>
                 <input type="text" name="job" required placeholder="О себе" class="popup__input popup__input_edit_job">
               </fieldset>
-              <button type="button" class="button button_type_save-profile button_style_save">Сохранить</button>
+              <button type="submit" class="button button_type_save-profile button_style_save">Сохранить</button>
               </form>
           </div>
         </div>
@@ -50,7 +50,7 @@
                 <input type="text" name="name" required placeholder="Название" class="popup__input popup__input_foto_name">
                 <input type="text" name="link" required placeholder="Ссылка на картинку" class="popup__input popup__input_foto_link">
               </fieldset>
-              <button type="button" class="button button_type_save-mesto button_style_save">Создать</button>
+              <button type="submit" class="button button_type_save-mesto button_style_save">Создать</button>
             </form>
           </div>
         </div>
