--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p class="profile__info-subtitle">Исследователь океана</p>
               <button type="button" class="button button_type_edit-profile" aria-label="Редактировать"></button>
             </div>
-            <button type="button" class="button button_type_add-profile" aria-label="Добавить"></button>
+            <button type="submit" class="button button__submit button_type_add-profile" aria-label="Добавить"></button>
           </section>
           <section class="group-cards indent__group-cards">
           </section>
@@ -28,16 +28,18 @@
         <footer class="footer indent__footer">
           <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
         </footer>
-        <div class="popup popup_type_profile popup_theme_light">
+        <div class="popup popup_type_profile popup_theme_light popup popup_type_profile popup_theme_light">
           <button type="button" class="button button_style_close button_type_close-profile" aria-label="Закрыть"></button>
           <div class="popup__container">
             <h2 class="popup__title">Редактировать профиль</h2>
-            <form name="edit-form" class="form form-profile">
+            <form name="edit-form" class="form form-profile" novalidate>
               <fieldset class="popup__contact">
-                <input type="text" name="name" required placeholder="Имя" class="popup__input popup__input_edit_name" autofocus>
-                <input type="text" name="job" required placeholder="О себе" class="popup__input popup__input_edit_job">
+                <input id="name-profile" type="text" name="name" required placeholder="Имя" class="popup__input popup__input_edit_name" minlength="2" maxlength="40" autofocus>
+                <span class="span span__error span__error-name-profile"></span>
+                <input id="job-profile" type="text" name="job" required placeholder="О себе" class="popup__input popup__input_edit_job" minlength="2" maxlength="200">
+                <span class="span span__error span__error-job-profile"></span>
               </fieldset>
-              <button type="submit" class="button button_type_save-profile button_style_save">Сохранить</button>
+              <button type="submit" class="button button__submit button_type_save-profile button_style_save">Сохранить</button>
               </form>
           </div>
         </div>
@@ -45,12 +47,14 @@
           <button type="button" class="button button_style_close button_type_close-mesto" aria-label="Закрыть"></button>
           <div class="popup__container">
             <h2 class="popup__title">Новое место</h2>
-            <form name="new-mesto-form" class="form form-mesto">
+            <form name="new-mesto-form" class="form form-mesto" novalidate>
               <fieldset class="popup__contact">
-                <input type="text" name="name" required placeholder="Название" class="popup__input popup__input_foto_name">
-                <input type="text" name="link" required placeholder="Ссылка на картинку" class="popup__input popup__input_foto_link">
+                <input id="name-mesto" type="text" name="name" required placeholder="Название" class="popup__input popup__input_foto_name" minlength="2" maxlength="30">
+                <span class="span span__error span__error-name-mesto"></span>
+                <input id="url-mesto" type="url" name="link" required placeholder="Ссылка на картинку" class="popup__input popup__input_foto_link">
+                <span class="span span__error span__error-url-mesto"></span>
               </fieldset>
-              <button type="submit" class="button button_type_save-mesto button_style_save">Создать</button>
+              <button type="submit" class="button button__submit button_type_save-mesto button_style_save">Создать</button>
             </form>
           </div>
         </div>
@@ -73,5 +77,6 @@
         </article>
       </template>
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validate.js"></script>
     </body>
     </html>
