--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p class="profile__info-subtitle">Исследователь океана</p>
               <button type="button" class="button button_type_edit-profile" aria-label="Редактировать"></button>
             </div>
-            <button type="submit" class="button button__submit button_type_add-profile" aria-label="Добавить"></button>
+            <button type="submit" class="button button-submit button_type_add-profile" aria-label="Добавить"></button>
           </section>
           <section class="group-cards indent__group-cards">
           </section>
@@ -35,11 +35,11 @@
             <form name="edit-form" class="form form-profile" novalidate>
               <fieldset class="popup__contact">
                 <input id="name-profile" type="text" name="name" required placeholder="Имя" class="popup__input popup__input_edit_name" minlength="2" maxlength="40" autofocus>
-                <span class="span span__error span__error-name-profile"></span>
+                <span c span_name-profile"></span>
                 <input id="job-profile" type="text" name="job" required placeholder="О себе" class="popup__input popup__input_edit_job" minlength="2" maxlength="200">
-                <span class="span span__error span__error-job-profile"></span>
+                <span class="span span_job-profile"></span>
               </fieldset>
-              <button type="submit" class="button button__submit button_type_save-profile button_style_save">Сохранить</button>
+              <button type="submit" class="button button-submit button_type_save-profile button_style_save">Сохранить</button>
               </form>
           </div>
         </div>
@@ -50,11 +50,11 @@
             <form name="new-mesto-form" class="form form-mesto" novalidate>
               <fieldset class="popup__contact">
                 <input id="name-mesto" type="text" name="name" required placeholder="Название" class="popup__input popup__input_foto_name" minlength="2" maxlength="30">
-                <span class="span span__error span__error-name-mesto"></span>
+                <span class="span span_name-mesto"></span>
                 <input id="url-mesto" type="url" name="link" required placeholder="Ссылка на картинку" class="popup__input popup__input_foto_link">
-                <span class="span span__error span__error-url-mesto"></span>
+                <span class="span span_url-mesto"></span>
               </fieldset>
-              <button type="submit" class="button button__submit button_type_save-mesto button_style_save">Создать</button>
+              <button type="submit" class="button button-submit button_type_save-mesto button_style_save">Создать</button>
             </form>
           </div>
         </div>
