--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <form name="edit-form" class="form form-profile" novalidate>
               <fieldset class="popup__contact">
                 <input id="name-profile" type="text" name="name" required placeholder="Имя" class="popup__input popup__input_edit_name" minlength="2" maxlength="40" autofocus>
-                <span c span_name-profile"></span>
+                <span class="span span_name-profile"></span>
                 <input id="job-profile" type="text" name="job" required placeholder="О себе" class="popup__input popup__input_edit_job" minlength="2" maxlength="200">
                 <span class="span span_job-profile"></span>
               </fieldset>
