--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <footer class="footer indent__footer">
           <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
         </footer>
-        <div class="popup popup_type_profile popup_theme_light popup popup_type_profile popup_theme_light">
-          <button type="button" class="button button_style_close button_type_close-profile" aria-label="Закрыть"></button>
+        <div class="popup popup_type_profile popup popup_type_profile popup_theme_light">
+          <button type="button" class="button popup__close button_style_close" aria-label="Закрыть"></button>
           <div class="popup__container">
             <h2 class="popup__title">Редактировать профиль</h2>
             <form name="edit-form" class="form form-profile" novalidate>
@@ -44,7 +44,7 @@
           </div>
         </div>
         <div class="popup popup_type_mesto popup_theme_light">
-          <button type="button" class="button button_style_close button_type_close-mesto" aria-label="Закрыть"></button>
+          <button type="button" class="button popup__close button_style_close" aria-label="Закрыть"></button>
           <div class="popup__container">
             <h2 class="popup__title">Новое место</h2>
             <form name="new-mesto-form" class="form form-mesto" novalidate>
@@ -59,7 +59,7 @@
           </div>
         </div>
         <div class="popup popup_type_image popup_theme_dark">
-          <button type="button" class="button button_style_close button_type_close-image" aria-label="Закрыть"></button>
+          <button type="button" class="button popup__close button_style_close" aria-label="Закрыть"></button>
           <figure class="popup__image-container">
             <img src="." class="popup__image" alt="">
             <figcaption class="popup__image-caption"></figcaption>
