--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </figure>
         </div>
       </div>
-      <template id="card_template">
+      <template id="card_template" class="card_template">
         <article class="card">
           <img class="card__img" src="." alt="">
           <div class="card__caption">
@@ -77,6 +77,7 @@
         </article>
       </template>
       <script src="./scripts/index.js"></script>
-      <script src="./scripts/validate.js"></script>
+      <script type="module" src="./scripts/Card.js"></script>
+      <script type="module" src="./scripts/FormValidator.js"></script>
     </body>
     </html>
