--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <button type="button" class="button popup__close button_style_close" aria-label="Закрыть"></button>
           <div class="popup__container">
             <h2 class="popup__title">Редактировать профиль</h2>
-            <form name="edit-form" class="form form__profile" novalidate>
+            <form name="edit-form" class="form form_profile" novalidate>
               <fieldset class="popup__contact">
                 <input id="name-profile" type="text" name="name" required placeholder="Имя" class="popup__input popup__input_edit_name" minlength="2" maxlength="40" autofocus>
                 <div class="indent__span"><span class="span span_name-profile"></span></div>
@@ -47,7 +47,7 @@
           <button type="button" class="button popup__close button_style_close" aria-label="Закрыть"></button>
           <div class="popup__container">
             <h2 class="popup__title">Новое место</h2>
-            <form name="new-mesto-form" class="form form__mesto" novalidate>
+            <form name="new-mesto-form" class="form form_mesto" novalidate>
               <fieldset class="popup__contact">
                 <input id="name-mesto" type="text" name="name" required placeholder="Название" class="popup__input popup__input_foto_name" minlength="2" maxlength="30">
                 <div class="indent__span">
